--- a/src/app/temp-unit-convertor/temp-unit-convertor.component.html
+++ b/src/app/temp-unit-convertor/temp-unit-convertor.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="jumbotron">
+<div class="tempCalculator">
+  <div class="temp">
     <h2>Temperature Unit Convertor</h2>
     <div class="row">
       <div class="col-sm-6">
