--- a/src/app/temp-unit-convertor/temp-unit-convertor.component.css
+++ b/src/app/temp-unit-convertor/temp-unit-convertor.component.css
@@ -20,3 +20,17 @@ button{
 .row{
     padding:1em;
 }
+.temp{
+    margin-left: 7px;
+    margin-right: 7px;
+    background-color: #d0d7e2;
+}
+#tempCalculator{
+    width: 1000px;
+    background-color: #d0d7e2;
+    text-align: center;
+    padding: 4em;
+    border-radius: 6px;
+    border: 0.1px; 
+   
+}
