--- a/src/app/bmi-calculator/bmi-calculator.component.html
+++ b/src/app/bmi-calculator/bmi-calculator.component.html
@@ -8,7 +8,7 @@
     </div> 
 
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="col-md-12 t  margin-bottom:2px;ext-center">
         <h3>Enter Your Weight</h3>   
       </div>
     </div> 
@@ -39,6 +39,7 @@
           <label for="feet">Feet</label>
           <input class="form-control" [(ngModel)]="feet" id="feet" (keyup)="convertHeight('feet')" placeholder="Enter feet">
       </div>
+      
       <div class="col-sm-4 text-center">
           <label for="inches">Inches</label>
           <input class="form-control" [(ngModel)]="inches" id="inches" (keyup)="convertHeight('inches')" placeholder="Enter inches">
@@ -57,7 +58,7 @@
 
     <div class="row">
       <div class="col-sm-12 text-center">
-    	  <p>Enter your height either in stones/pounds or kilograms and your height either in feet/inches or metres.</p>
+    	  <p>Enter your weight either in stones/pounds or kilograms and your height either in feet/inches or metres.</p>
       </div>
     </div>
 
@@ -75,7 +76,5 @@
       </div>
     </div>
 
-
-
- </div>
+    
 </div>
