--- a/src/app/bmi-calculator/bmi-calculator.component.css
+++ b/src/app/bmi-calculator/bmi-calculator.component.css
@@ -1,12 +1,3 @@
-#bmi-calculator{
-    width: 1000px;
-    background-color: #d0d7e2;
-    text-align: center;
-    padding: 4em;
-    border-radius: 6px;
-    border: 0.1px; 
-   
-}
 .bmi{
     margin-left: 7px;
     margin-right: 7px;
@@ -29,4 +20,10 @@
 
 .button{
     margin: 1em;
+}
+.green{
+    color: green;
+}
+.red{
+    color: red;
 }
