--- a/src/app/bmi-calculator/bmi-calculator.component.html
+++ b/src/app/bmi-calculator/bmi-calculator.component.html
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="col-md-12 text-center message">
         <h3>
-          {{message}} {{range}}
+          {{message}}<span [ngClass]="colorcode()"> {{range}}</span>
         </h3>
       </div>
     </div>
